@@ -1314,3 +1314,23 @@ ENGINE *setup_engine(BIO *err, const char *engine, int debug)
 		}
         return e;
         }
+
+int load_config(char *filename, BIO *err)
+	{
+	unsigned long flags;
+	if (filename)
+		flags = 0;
+	else
+		flags = CONF_MFLAGS_IGNORE_MISSING_FILE;
+
+	if (CONF_modules_load_file(filename, NULL, flags) <= 0)
+		{
+		if (err)
+			{
+			BIO_printf(err, "Error loading config file\n");
+			ERR_print_errors(err);
+			}
+		return 0;
+		}
+	return 1;
+	}
